spec/invalid/invalid_token.expr.diagnostics
[
    Diagnostic {
        severity: Error,
        code: Some(
            "lexical",
        ),
        message: "Invalid token",
        labels: [
            Label {
                style: Primary,
                file_id: 0,
                range: 0..0,
                message: "",
            },
        ],
        notes: [],
    },
]